# telemetry-studio

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  publish.yml
src/gpstitch/: app.py
src/gpstitch/api/: editor.py  preview.py  render.py  time_sync.py
src/gpstitch/models/: editor.py  job.py  schemas.py
src/gpstitch/services/: render_service.py  renderer.py
src/gpstitch/static/unified/css/: unified.css
src/gpstitch/static/unified/js/: UnifiedApp.js
src/gpstitch/static/unified/js/components/: BatchRenderModal.js  GpxOptionsPanel.js  RenderModal.js
src/gpstitch/static/unified/js/state/: UnifiedState.js
src/telemetry_studio/: __init__.py  app.py  config.py  constants.py  main.py
src/telemetry_studio/api/: __init__.py  command.py  editor.py  layouts.py  options.py  preview.py  render.py  templates.py  upload.py
src/telemetry_studio/models/: __init__.py  editor.py  job.py  schemas.py
src/telemetry_studio/patches/: __init__.py  gpx_patches.py
src/telemetry_studio/scripts/: __init__.py  gopro_dashboard_wrapper.py
src/telemetry_studio/services/: __init__.py  file_manager.py  gps_analyzer.py  job_manager.py  metadata.py  render_service.py  renderer.py  srt_parser.py  template_service.py  widget_registry.py  xml_converter.py
src/telemetry_studio/static/: app.js  index.html  style.css
src/telemetry_studio/static/editor/: index.html
src/telemetry_studio/static/editor/css/: editor.css
src/telemetry_studio/static/editor/js/: main.js
src/telemetry_studio/static/editor/js/api/: client.js
src/telemetry_studio/static/editor/js/components/: LayersPanel.js  PropertiesPanel.js  WidgetPalette.js
src/telemetry_studio/static/unified/: index.html
src/telemetry_studio/static/unified/css/: unified.css
src/telemetry_studio/static/unified/js/: UnifiedApp.js
src/telemetry_studio/static/unified/js/components/: BatchRenderModal.js  FileUploader.js  GPSBatchWarningDialog.js  GPSQualityCard.js  GPSQualityIndicator.js  GPSWarningModal.js  (+5 more)
tests/: __init__.py  conftest.py
tests/api/: test_editor.py  test_render.py  test_time_sync.py
tests/e2e/: conftest.py  test_batch_render.py  test_render_pipeline.py  test_smoke.py  test_time_sync.py
tests/fixtures/: data.py  factories.py
tests/fixtures/videos/: DJI_20250721102743_0001_D.SRT  run_activity_21671656806.gpx
tests/integration/: conftest.py  test_dji_srt.py  test_metadata.py  test_metadata_preservation.py  test_render_service.py  test_renderer.py
tests/unit/: __init__.py  test_config.py  test_job_manager.py  test_metadata.py
tests/unit/models/: test_time_alignment_models.py
tests/unit/patches/: test_gpx_patches.py  test_library_contract.py  test_patches.py
tests/unit/services/: test_file_manager.py  test_gps_analyzer.py  test_job_manager.py  test_render_service.py  test_renderer.py  test_srt_parser.py  test_widget_registry.py  test_xml_converter.py
(+1 files in other folders)
